# arcade-video-scanner

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  QUICK_REFERENCE.md  README.md  ROADMAP.md  ROADMAP_SUMMARY.md  check_db_setting.py  debug_db.py  debug_db_contents.py  debug_scan.py  docker-compose.yml  ideas.md  pyproject.toml  requirements.txt  run.sh  run_fix.py  scan_videos_mit_shell.py  server_log.txt  settings.json.example  status.txt  test_api.py  test_dump.py  test_probe.py  test_probe2.py  test_probe3.py  test_puppeteer.js  test_ui.js  verify_frontend_v2.py  video_dashboard.html
.agent/workflows/: repo-cleanup.md  ux-patterns.md  workflow-orchestration.md
.github/: GITHUB_SETUP.md
.github/ISSUE_TEMPLATE/: feature_request.md
arcade_scanner/: __init__.py  app_config.py  config.py  logging_config.py  main.py  onboarding.py
arcade_scanner/core/: __init__.py  bitrate_analyzer.py  cache_manager.py  deovr_generator.py  duplicate_detector.py  hw_encode_detect.py  maintenance.py  scanner.py  video_processor.py
arcade_scanner/database/: __init__.py  json_store.py  sqlite_store.py  user_store.py
arcade_scanner/models/: __init__.py  media_asset.py  user.py  video_entry.py
arcade_scanner/scanner/: __init__.py  file_system.py  image_inspector.py  inspector.py  manager.py  media_probe.py  video_inspector.py
arcade_scanner/security/: __init__.py  auth.py  validators.py
arcade_scanner/server/: __init__.py  api_handler.py  response_helpers.py  streaming_util.py  web_server.py
arcade_scanner/templates/: __init__.py  client_script.py  components.py  dashboard_template.py  gif_panel_component.py  styles.py  theme.py  ui_components.py
dev-docs/: nginx-https-setup.md  optimization_and_ui_roadmap.md  performance-roadmap.md  video-optimizer.md
ios_client/: APIService.swift  ArcadeScannerApp.swift  ContentView.swift  LibraryViewModel.swift  SettingsView.swift  SidebarView.swift  SmartCollection.swift  Video.swift  VideoGridView.swift  VideoPlayerView.swift
nginx/: arcade-scanner.conf
scripts/: batch_controller.py  debug_auth.py  finalize_review.py  fix_av1_tags.py  funfacts.json  mac_worker.py  manage_users.py  regenerate_report.py  reset_admin_password.py  restore_collections.py  verify_auth_endpoints.py  verify_sqlite.py  video_optimizer.py
tests/: conftest.py  test_dashboard_template.py  test_dom_contract.py  test_js_completeness.py  test_js_runtime_patterns.py  test_js_syntax.py  test_logging_config.py  test_route_interface.py  test_security_validators.py  test_sqlite_store.py  test_unicode_surrogates.py  test_video_processor.py
(+38 files in other folders)
